archive/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: moja-box-cluster-address
    kubernetes.io/ingress.allow-http: "true"
spec:
  backend:
    serviceName: nginx-service
    servicePort: nginx-http

spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-app
          servicePort: 8080
